# daisy-hackathon

./: DAISI.md  README.md  main.py  pyproject.toml
aws/: __init__.py  s3_driver.py
custom_types/: __init__.py
